css align error fix

--- a/styles/base.css
+++ b/styles/base.css
@@ -85,7 +85,7 @@ img {
   grid-column: 4/5;
   grid-row: 2/9; 
   padding: 1rem;
-  align-content: top;
+  vertical-align: top;
   color: rgb(58, 75, 29);
   box-shadow:
 	  inset #283618 0 0 0 5px;
